--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
     "meteor-node-stubs": "~0.2.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-router-dom": "^4.1.1",
     "react-table": "^6.4.0"
   },
   "devDependencies": {
+    "@storybook/react": "^3.1.5",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2016": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
-    "babel-root-slash-import": "^1.1.0",
-    "@storybook/react": "^3.1.5"
+    "babel-root-slash-import": "^1.1.0"
   }
 }
