--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
     "react-table": "^6.4.0"
   },
   "devDependencies": {
-    "@storybook/react": "^3.1.5",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-1": "^6.24.1",
-    "babel-root-slash-import": "^1.1.0"
+    "babel-eslint": "^8.2.2",
+    "eslint": "^4.18.1"
   }
 }
